tests/ui/traits/next-solver/normalize/normalize-param-env-2.stderr
error[E0275]: overflow evaluating the requirement `<() as A<T>>::Assoc well-formed`
  --> $DIR/normalize-param-env-2.rs:24:22
   |
LL |         Self::Assoc: A<T>,
   |                      ^^^^

error[E0275]: overflow evaluating the requirement `(): A<T>`
  --> $DIR/normalize-param-env-2.rs:27:10
   |
LL |         <() as A<T>>::f();
   |          ^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0275`.
